Remove existing supersedes relations